# flet_app

./: buildozer.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: desktop-and-mobile-builds.yml
