[project]

name = "Down Free"
version = "1.0.0"
description = "App para la descarga de archivos"
authors = [
  {name = "Hiyabo", email = "KeimaSenpai@proton.me"}
]
dependencies = ["flet==0.26.0", "requests", "yarl", "bs4", "pysocks", "hiyabocut==1.0.7", "asyncio"]


[tool.flet]
org = "by.bytebloom" # --org
product = "Down Free" # --product
company = "ByteBloom" # --company
copyright = "Copyright (C) 2025 by ByteBloom" # --copyright
build_number = 2 # --build-number
flutter.dependencies = ["flet_permission_handler", "wakelock_plus"]


[tool.flet.android.permission] # --android-permissions
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.BACKGROUND_REFRESH" = true
"android.permission.IGNORE_BATTERY_OPTIMIZATIONS" = true
"android.permission.MANAGE_EXTERNAL_STORAGE" = true
"android.permission.MEDIA_LIBRARY" = true
"android.permission.STORAGE" = true
"android.permission.INTERNET" = true
"android.permission.RUN_USER_INITIATED_JOBS" = true

[tool.flet.ios.info] # --info-plist
NSLocationWhenInUseUsageDescription = "This app uses location service when in use."

[tool.flet.android.signing]
# store and key passwords can be passed with `--android-signing-key-store-password`
# and `--android-signing-key-password` options or
# FLET_ANDROID_SIGNING_KEY_STORE_PASSWORD
# and FLET_ANDROID_SIGNING_KEY_PASSWORD environment variables.
key_store = "build/bytebloom.jks" # --android-signing-key-store
key_alias = "upload"
